# tile-processor

./: .bumpversion.cfg  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docker/: docker-compose.yml
docker/bag3d_db/: bag3d_db.dump  init_db.sh
docker/postgis/: Dockerfile  docker_run_postgis.sh
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
docs/source/: conf.py  index.rst  modules.rst  tile_processor.rst
src/: exampledb_processor.sh  simulate_memory_use.sh
tests/: conftest.py  test_cli.py  test_controller.py  test_db.py  test_output.py  test_processor.py  test_tile_runner.py  test_tiles.py  test_worker.py
tests/data/: bag3d_config.yml  bag3d_config_geof.yml  bag3d_config_geof_ahn34.yml  bag3d_config_schema.yml  exampledb_config.yml  templatedb_config.yml  templatedb_config_schema.yml  test_config.yml  test_config_schema.yml
tile_processor/: __init__.py  cli.py  controller.py  db.py  output.py  processor.py  recorder.py  tileconfig.py  worker.py
tile_processor/schemas/: exampledb_config_schema.yml  schemas.json
